colocando so pra aceitar numeros

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -74,7 +74,7 @@
           <ul>
             <li class="expense">
               <img src="./img/food.svg" alt="Ícone de tipo da despesa" />
-
+              
               <div class="expense-info">
                 <strong>Almoço</strong>
                 <span>Alimentação</span>
