--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 type="text"
                 name="amount"
                 id="amount"
-                placeholder=" R$ 0,00"
+                placeholder="R$ 0,00"
                 required
               />
             </fieldset>
@@ -72,9 +72,10 @@
           </header>
 
           <ul>
+            <!-- Exemplo da estrutura HTML de um item de despesa
             <li class="expense">
               <img src="./img/food.svg" alt="Ícone de tipo da despesa" />
-              
+
               <div class="expense-info">
                 <strong>Almoço</strong>
                 <span>Alimentação</span>
@@ -84,6 +85,7 @@
 
               <img src="./img/remove.svg" alt="remover" class="remove-icon" />
             </li>
+            -->
           </ul>
         </aside>
       </section>
